# experiment-tracker

./: .gitignore  LICENSE  README.md  demo.py  pyproject.toml
.github/workflows/: ci.yml
src/: experiment_tracker.py  main.py
src/experiment_tracker/: __init__.py  cli.py  experiment_tracker.py  main.py
tests/: test_cli.py  test_experiment_tracker.py
