[project]
name = "experiment-tracker"
version = "1.0.0"
description = "Lightweight experiment tracking"
readme = "README.md"
authors = [
    { name = "Jacob Eliason", email = "jacobeliason@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/experiment_tracker"]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "numpy>=2.2.3",
]

[tool.hatch.build]
include = [
    "src/*.py",
    "src/*.sql",
]
